--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,25 @@
 buildscript {
-    ext.kotlin_version = "1.6.10"
+    ext {
+        kotlin_version = "1.9.0"
+        compileSdkVersion = 34
+        targetSdkVersion = 34
+        minSdkVersion = 21
+    }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0"
+        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 allprojects {
     repositories {
         google()
-        maven { url "https://jitpack.io" }
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 
