--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,13 @@
 buildscript {
-    ext {
-        kotlin_version = "1.9.0"
-        compileSdkVersion = 34
-        targetSdkVersion = 34
-        minSdkVersion = 21
+        ext {
+        kotlin_version = "1.9.22"  // Updated Kotlin version
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.1'
+         classpath 'com.android.tools.build:gradle:8.2.2'  // Update to latest stable version
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -18,8 +15,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        mavenCentral()
         maven { url "https://jitpack.io" }
+        mavenCentral()
     }
 }
 
